# dataframework

./: .gitignore  LICENSE  Loader.py  OldLoader.py  README.md  UImain.py  pyproject.toml  requirement.txt
UI/: demand.py  pirce.py  production.py
dataframework/: DataStructuring.py  Entsodictionaries.py  entsoe.py  entsoeBalancing.py  entsoe_generation.py  entsoe_load.py  entsoe_transmission.py  jao.py  jaoCore.py  jaoCoreID.py  loaderAPI.py  netztransparenz.py  utils.py
src/: UIutils.py  entsoe.py  jao.py  loadertypes.py  netztransparenz.py  parameters.py  utils.py
